app/crates/ironstate-aggregate/tests/ui/float_field.rs
#[derive(ironstate_aggregate::StableHash)]
struct Reading {
    sensor: u32,
    value: f64,
}

fn main() {}
